--- a/Mobile/SourceCode/ICP9/app/src/main/res/values/strings.xml
+++ b/Mobile/SourceCode/ICP9/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
-<resources>
-    <string name="app_name">ICP9</string>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_name">My Order</string>
+    <string name="name">Name</string>
+    <string name="toppings">Toppings</string>
+    <!--    <string name="whipped_cream">Whipped Cream</string>-->
+    <!--    <string name="chocolate">Chocolate</string>-->
+    <string name="quantity">Quantity</string>
+    <string name="initial_quantity_value">1</string>
+    <string name="order">Order</string>
+    <string name="order_summary_name">Dear <xliff:g example="Ansh" id="name">%s</xliff:g></string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="order_details">Here is your order details:</string>
+    <string name="order_summary_chesse">Add Cheese? <xliff:g example="yes" id="addCheese">%s</xliff:g></string>
+    <string name="order_summary_pepperoni">Add Pepperoni? <xliff:g example="yes" id="addPepperoni">%s</xliff:g></string>
+    <string name="order_summary_mushrooms">Add Mushrooms? <xliff:g example="yes" id="addMushrooms">%s</xliff:g></string>
+    <string name="order_summary_peppers">Add Peppers? <xliff:g example="yes" id="addPeppers">%s</xliff:g></string>
+    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
+    <string name="order_summary_total_price">Total: $ <xliff:g example="10" id="price">%.2f</xliff:g></string>
+    <string name="thank_you">Thank you!</string>
+    <string name="too_much_coffee">Please select less than one hundred cups of coffee</string>
+    <string name="too_little_coffee">Please select atleast one cup of coffee</string>
 </resources>
